--- a/disclaimer.html
+++ b/disclaimer.html
@@ -90,7 +90,7 @@
                     <li class="topnav__item topnav__dropdown">
                         <a href="" class="topnav__dropdown-link">Support Us</a>
                         <ul class="topnav__dropdown-menu">
-                            <li><a href="stripe.html">Make a Donation</a></li>
+                            <li><a href="stripe.html">CTA</a></li>
                             <li><a href="partnership.html">Strategic Partnership</a></li>
                             <li><a href="internship.html">Internship</a></li>
                         </ul>
