--- a/events.html
+++ b/events.html
@@ -89,7 +89,7 @@
                     <li class="topnav__item topnav__dropdown">
                         <a href="" class="topnav__dropdown-link">Support Us</a>
                         <ul class="topnav__dropdown-menu">
-                            <li><a href="stripe.html">Make a Donation</a></li>
+                            <li><a href="stripe.html">CTA</a></li>
                             <li><a href="partnership.html">Strategic Partnership</a></li>
                             <li><a href="internship.html">Internship</a></li>
                         </ul>
@@ -153,7 +153,7 @@
                 </p>
                 <p>
                     <span class="highlight-maroon">How to Submit?</span>
-                    Scientific Reports is now accepting abstract submissions to assess the suitability of your research for this special issue. Take advantage of this opportunity to receive valuable feedback before formally submitting your full paper (https://www.nature.com/srep/author-instructions/submission-guidelines).
+                    Scientific Reports is now accepting abstract submissions to assess the suitability of your research for this special issue. Take advantage of this opportunity to receive valuable feedback before formally submitting your full paper <a href="https://www.nature.com/srep/author-instructions/submission-guidelines">(https://www.nature.com/srep/author-instructions/submission-guidelines).</a>
                 </p>
                 <p>
                     <span class="highlight-maroon">What We’re Looking For:</span>
