--- a/news.html
+++ b/news.html
@@ -89,7 +89,7 @@
                     <li class="topnav__item topnav__dropdown">
                         <a href="" class="topnav__dropdown-link">Support Us</a>
                         <ul class="topnav__dropdown-menu">
-                            <li><a href="stripe.html">Make a Donation</a></li>
+                            <li><a href="stripe.html">CTA</a></li>
                             <li><a href="partnership.html">Strategic Partnership</a></li>
                             <li><a href="internship.html">Internship</a></li>
                         </ul>
@@ -157,11 +157,9 @@
                     <time class="news__time">January 13, 2025</time>
                     <div class="detailed-news__text">
                         <p>Universiti Malaya – In a move to inspire and educate the next generation of innovators, Dr. Nisha Govender, the Chief Technology Officer (CTO) of Nanofertech Sdn. Bhd., delivered an insightful lecture to master’s students at Universiti Malaya. The session, titled “Fundamentals of Entrepreneurship & Must-Knows of Startups,” was held for the students of SQE 7023 Innovation Strategy & Entrepreneurship.</p>
-                        <p>Focused on deep-tech innovation, Dr. Nisha's hour-long lecture was designed to guide aspiring entrepreneurs through the complex world of tech startups. With a focus on how technology founders can transform their innovations into real-world market solutions, the lecture highlighted the importance of understanding the startup journey from the inside out.</p>
                         <p>The session delved into the essential elements every tech entrepreneur needs to consider when bringing a disruptive idea to market. Dr. Nisha discussed the key challenges and anticipated hurdles, offering insights on navigating these obstacles gracefully and effectively. From identifying and addressing customer pain points to managing growth and scaling a business, Dr. Nisha provided a roadmap that emphasized both strategic thinking and practical application.</p>
                         <p>"The key to success in entrepreneurship lies in constant learning and adapting," Dr. Nisha shared with the group. "It’s about bringing together the best of many disciplines such as communication, technology, legal, finance and continuously evolving your approach to meet market needs."</p>
                         <p>Nanofertech's commitment to supporting and empowering future entrepreneurs is part of its larger vision to foster innovation in Malaysia’s tech ecosystem. By partnering with institutions like Universiti Malaya, the company hopes to cultivate a new wave of thought leaders who are equipped to drive forward cutting-edge technologies. Dr. Nisha concluded her lecture by reiterating that while the journey of entrepreneurship can be challenging, it is also deeply rewarding. "As entrepreneurs, we must be prepared to wear multiple hats, learn continuously and remain adaptable in the face of challenges," she said.</p>
-                        <p>The lecture was an enriching experience for the students, many of whom expressed excitement about applying the lessons learned to their own entrepreneurial ventures in the near future. With such hands-on insights from industry leaders like Dr. Nisha, these aspiring entrepreneurs are better prepared to navigate the complexities of building successful startups in today’s rapidly evolving tech landscape.</p>
                     </div>
                 </div>
             </div>
@@ -178,10 +176,10 @@
                 <div>
                     <time class="news__time">Novemeber 23, 2024</time>
                     <p>
-                    Nanofertech received the prestigious L-Grant Entrepreneur Life-tech Award from Leave A Nest, Malaysia and Japan, in recognition of its pioneering technology in precision fertilization. The award ceremony was held at the Tan Sri Lee Lam Thye Hall, National Institute of Occupational Safety and Health (NIOSH), Bandar Baru Bangi, Selangor. This groundbreaking controlled-release technology uses neural networks to precisely navigate nutrient release, optimizing crop growth and reducing environmental impact. Nanofertech’s approach is a game-changer in the agricultural industry, addressing both the need for higher crop yields and the global demand for more sustainable farming practices.  
+                    Nanofertech received the prestigious L-Grant Entrepreneur Life-tech Award from Leave A Nest, Malaysia and Japan, in recognition of its pioneering technology in precision fertilization. The award ceremony was held at the Tan Sri Lee Lam Thye Hall, National Institute of Occupational Safety and Health (NIOSH), Bandar Baru Bangi, Selangor. This groundbreaking controlled-release technology uses neural networks to precisely navigate nutrient release, optimizing crop growth and reducing environmental impact.
                     </p>
                     <p>
-                    The integration of neural networks allows for the timely and efficient release of nutrients, ensuring that plants receive exactly what they need when they need it, minimizing fertilizer waste and nutrient runoff. During the ceremony, Nanofertech was presented with a cash prize of 100,000 yen and an award certificate, underscoring the significance of their contribution to the agri-tech sector. The award recognizes the startup’s commitment towards sustainable agricultural practices, making it a key player in the future of precision farming. This recognition marks a significant milestone for Nanofertech as it continues to scale its solutions and collaborate with agricultural stakeholders to implement its technology on a wider scale.
+                    During the ceremony, Nanofertech was presented with a cash prize of 100,000 yen and an award certificate, underscoring the significance of their contribution to the agri-tech sector. The award recognizes the startup’s commitment towards sustainable agricultural practices, making it a key player in the future of precision farming. This recognition marks a significant milestone for Nanofertech as it continues to scale its solutions and collaborate with agricultural stakeholders to implement its technology on a wider scale.
                     </p>
                 </div>
             </div>
