--- a/our-work.html
+++ b/our-work.html
@@ -89,7 +89,7 @@
                     <li class="topnav__item topnav__dropdown">
                         <a href="" class="topnav__dropdown-link">Support Us</a>
                         <ul class="topnav__dropdown-menu">
-                            <li><a href="stripe.html">Make a Donation</a></li>
+                            <li><a href="stripe.html">CTA</a></li>
                             <li><a href="partnership.html">Strategic Partnership</a></li>
                             <li><a href="internship.html">Internship</a></li>
                         </ul>
@@ -118,7 +118,7 @@
             <img class="our-work__image" src="images/innovation-center.png" alt="Innovation Picture">
             <img class="our-work__image" src="images/innovation-right.jpg" alt="Innovation Picture">
             </div>
-            <p class="our-work__description">Welcome to the future of sustainable agriculture with Nanofertech's cutting-edge AI-powered controlled release technology for fertilizers, LAMATu. Traditional fertilizers have been essential in boosting crop yields, but their effectiveness is often compromised by inefficient nutrient release, over-application and environmental runoff. LAMATu revolutionize fertilization practices by integrating artificial intelligence with a sophisticated coating material to optimize the delivery of nutrients.</p>
+            <p class="our-work__description">Welcome to the future of sustainable agriculture with Nanofertech's cutting-edge AI-powered controlled release technology for fertilizers. Traditional fertilizers have been essential in boosting crop yields, but their effectiveness is often compromised by inefficient nutrient release, over-application and environmental runoff. </p>
 
         <section id="what-is-crt" class="what-is-crt">
             <h2 class="what-is-crt__title">Traditional Fertilizers: Challenges and Limitations</h2>
@@ -145,7 +145,7 @@
 
         <section id="solution" class="solution">
             <h2 class="solution__title">AI-Powered Controlled Release Technology</h2>
-            <p class="our-work__description">At Nanofertech, we've developed a transformative technology that combines precision and sustainability. Our controlled release fertilizers use a proprietary coating material, designed to regulate the release of nutrients based on plant needs, environmental conditions, and growth stages. This dynamic system is enhanced by an AI-powered model that adjusts and optimizes the release mechanism, ensuring nutrients are delivered at the right time, in the right amount, and where they are needed most.</p>
+            <p class="our-work__description">At Nanofertech, we've developed a transformative technology that combines precision and sustainability. Our controlled release fertilizers use a proprietary coating material, designed to regulate the release of nutrients based on plant needs, environmental conditions, and growth stages. This dynamic system is enhanced by an AI-powered model that adjusts and optimizes the release mechanism, <span class="highlight-green">ensuring nutrients are delivered at the right time</span>, in the right amount, and <span class="highlight-green">where they are needed most.</span></p>
             
             <div class="wrapper solution__wrapper">
                 <div class="solution__image-wrapper">
