--- a/stripe.html
+++ b/stripe.html
@@ -90,7 +90,7 @@
                     <li class="topnav__item topnav__dropdown">
                         <a href="" class="topnav__dropdown-link">Support Us</a>
                         <ul class="topnav__dropdown-menu">
-                            <li><a href="stripe.html">Make a Donation</a></li>
+                            <li><a href="stripe.html">CTA</a></li>
                             <li><a href="partnership.html">Strategic Partnership</a></li>
                             <li><a href="internship.html">Internship</a></li>
                         </ul>
@@ -113,7 +113,7 @@
     <div class="donate__main-container">
         <div class="donate__description">
               <h1 class="donate__title">
-                <span class="highlight-green">Call-To-Action</span>
+                <span class="highlight-green">Call-to-action (CTA)</span>
               </h1>
               <div class="intern__image-container">
                 <img class="intern__image" src="images/donation-left.jpg" alt="Intern Picture">
@@ -123,14 +123,15 @@
 
             <div class="donate__description">
               <p>
-                We invite you to join us in the fight against climate change by supporting Nanofertech's innovative CRT, non-polymer coating material embedded with AI navigation. Your donation will directly fund research and development, as well as support subsistence farming for underserved farmers in Malaysia.
+                We invite you to join us in the <span class="highlight-green">Green Horizons Initiative</span>, a collective effort to combat climate change and promote sustainable agriculture. By supporting Nanofertech’s innovative CRT, a cutting-edge non-polymer coating material integrated with AI navigation, you will directly empower underserved farmers in Malaysia.
               </p>
               <p>
-                By contributing, you’re helping us reduce the harmful emissions of greenhouse gases hailing particularly from nitrogen fertilizers, which are also a major source of GHGs in agriculture. CRT is built on the principle of circular economy and hence, plays a critical role in counteracting environmental hazards by transforming waste into valuable resources, creating a sustainable solution for the environment and farmers alike.
+                Sustainable fertilization is crucial in reducing the environmental footprint of agriculture. Your donation will help us <span class="highlight-green">tackle the greenhouse gas emissions</span> primarily driven by nitrogen fertilizers, which are a major source of pollution in farming. CRT embodies the circular economy principles, <span class="highlight-green">transforming waste into valuable resources</span> and offering a sustainable solution for both the planet and farmers.
               </p>
               <p>
-                Together, we can make a meaningful impact on both the climate and the livelihoods of vulnerable communities. Every donation counts!
+                Every penny donated will go directly towards supporting fertilizer trials conducted in collaboration with farmers practicing subsistence farming, otherwise defined as those who cultivate less than 0.5 hectares, growing primarily for their own consumption and selling any surplus. These trials will help demonstrate how sustainable fertilization can <span class="highlight-green">boost their productivity, protect the environment, and improve their livelihoods.</span>
               </p>
+              <p>Together, <span class="highlight-green">we can create lasting change.</span> Every donation counts in this shared mission. Let's work together for a healthier climate and improved livelihoods for those who need it most. <span class="highlight-green">Your support is essential in this journey!</span></p>
               <p><strong>Donate now and be part of the change. 🌱🌎</strong></p>
               <label for="amount">Donation Amount (MYR) </label>
               <input type="number" id="amount" name="amount" min="1" placeholder="Enter your amount" required /> 
