--- a/trials.html
+++ b/trials.html
@@ -89,7 +89,7 @@
                     <li class="topnav__item topnav__dropdown">
                         <a href="" class="topnav__dropdown-link">Support Us</a>
                         <ul class="topnav__dropdown-menu">
-                            <li><a href="stripe.html">Make a Donation</a></li>
+                            <li><a href="stripe.html">CTA</a></li>
                             <li><a href="partnership.html">Strategic Partnership</a></li>
                             <li><a href="internship.html">Internship</a></li>
                         </ul>
@@ -118,7 +118,7 @@
                 <img class="trials__picture left" src="images/fertilizer_trials/trial pic2.jpg">
                 <div class="trials__main">
                     <img class="trials__main-image" src="images/fertilizer_trials/trial-lamatu.jpg">
-                    <h3 class="trials__subtitle3">MORE with LESS</h3>
+                    <!-- <h3 class="trials__subtitle3">MORE with LESS</h3> -->
                 </div>
                 <!-- <h3 class="trials__subtitle2">Reduces Fertilization Cost</h3> -->
                 <img class="trials__picture right" src="images/fertilizer_trials/morewithless.jpg">
@@ -171,7 +171,7 @@
             <img class="trials__farmer-image" src="images/fertilizer_trials/testimonial-left.jpg" >
         <div class="trials__theme">   
             <h1 class="trials__title"><span class="highlight-green">The Fertilizer Trial Overview</span></h1> <br>
-            <p class="trials__statement">In collaboration with local agri-food producers, we conduct comprehensive field trials to assess the effectiveness of Lamatu compared to traditional fertilization methods. These trials are particularly focused on supporting subsistence farming, defined as farming on less than 0.5 hectares, where farmers primarily grow food for their own consumption and sell any surplus for immediate cash. The trial includes several test plots across various crops, such as grains (grass family), trees, vegetables, and fruit-bearing plants. By focusing on smaller-scale, sustainable practices, these trials aim to improve crop yields, enhance soil fertility, and support farmers in increasing their productivity without compromising the environment. </p>
+            <p class="trials__statement">In collaboration with local agri-food producers, we conduct comprehensive field trials to <span class="highlight-green">assess the effectiveness of Lamatu</span> compared to traditional fertilizers. These trials are particularly focused on supporting subsistence farming, defined as farming on less than 0.5 hectares, where farmers primarily grow food for their own consumption and sell any surplus for immediate cash. The trial includes several test plots across various crops, such as grains (grass family), trees, vegetables, and fruit-bearing plants. <span class="highlight-green">By focusing on smaller-scale, sustainable practices, these trials aim to improve crop yields, enhance soil fertility, and support farmers in increasing their productivity without compromising the environment.</span> </p>
         </div>
         <img class="trials__farmer-image" src="images/fertilizer_trials/testimonial-right.jpg" >
         </div>
@@ -221,7 +221,7 @@
                 <img class="trials__farmer-image" src="images/fertilizer_trials/looking-left.jpg" >
             <div class="trials__theme">   
                 <h1 class="trials__title"><span class="highlight-maroon">Looking Ahead</span></h1> <br>
-                <p class="trials__statement">Lamatu, a game-changer for modern agriculture. At Nanofertech, we are excited to explore opportunities to improve crop yields while reducing costs and minimizing environmental impact. For more information on how Lamatu can benefit your farm or to inquire about conducting a trial of your own, reach out to the Nanofertech team.</p>
+                <p class="trials__statement">Lamatu, a game-changer for modern agriculture. At Nanofertech, we are excited to explore opportunities to improve crop yields while reducing costs and minimizing environmental impact. For more information on how Lamatu can <span class="highlight-maroon">benefit your fertilizer business and/or farm</span> reach out to the Nanofertech team.
             </div>
             <img class="trials__farmer-image" src="images/fertilizer_trials/looking.jpg" >
             </div>
