--- a/internship.html
+++ b/internship.html
@@ -89,7 +89,7 @@
                     <li class="topnav__item topnav__dropdown">
                         <a href="" class="topnav__dropdown-link">Support Us</a>
                         <ul class="topnav__dropdown-menu">
-                            <li><a href="stripe.html">Make a Donation</a></li>
+                            <li><a href="stripe.html">CTA</a></li>
                             <li><a href="partnership.html">Strategic Partnership</a></li>
                             <li><a href="internship.html">Internship</a></li>
                         </ul>
@@ -125,12 +125,12 @@
                 <div class="intern_section">
                     <h2 class="intern__subtitle"><span class="highlight-maroon">What We Offer:</span></h2>
                     <ul class="intern__content">
-                        <li>Academic Credit: Earn academic credit for your internship while working with us! We’ll collaborate with your university to make sure the experience counts toward your degree.</li>
-                        <li>Duration: Flexible 6 to 12-month internship options—perfect for fitting with your academic schedule.</li>
-                        <li>Cutting-edge Learning: Dive deep into nanotechnology for agriculture, computational biology, plant science, and data science. You'll gain hands-on experience in high-impact projects that push the boundaries of innovation.</li>
-                        <li>Comprehensive Skill Development: From data analytics to nanotech applications, we offer you a well-rounded learning experience to boost your technical skills and make you more employable.</li>
-                        <li>Mentorship and Career Growth: Work directly with experts in the field who are passionate about guiding and mentoring the next generation of innovators. We equip you with skills that are highly sought after in the tech and agricultural sectors.</li>
-                        <li>Impactful Projects: Contribute to projects that focus on sustainability, agriculture efficiency, and environmental impact. Be part of a team that is making a difference!</li>
+                        <li><span class="highlight-maroon">Academic Credit</span>: Earn academic credit for your internship while working with us! We’ll collaborate with your university to make sure the experience counts toward your degree.</li>
+                        <li><span class="highlight-maroon">Duration</span>: Flexible 6 to 12-month internship options—perfect for fitting with your academic schedule.</li>
+                        <li><span class="highlight-maroon">Cutting-edge Learning</span>: Dive deep into nanotechnology for agriculture, computational biology, plant science, and data science. You'll gain hands-on experience in high-impact projects that push the boundaries of innovation.</li>
+                        <li><span class="highlight-maroon">Comprehensive Skill Development</span>: From data analytics to nanotech applications, we offer you a well-rounded learning experience to boost your technical skills and make you more employable.</li>
+                        <li><span class="highlight-maroon">Mentorship and Career Growth</span>: Work directly with experts in the field who are passionate about guiding and mentoring the next generation of innovators. We equip you with skills that are highly sought after in the tech and agricultural sectors.</li>
+                        <li><span class="highlight-maroon">Impactful Projects</span>: Contribute to projects that focus on sustainability, agriculture efficiency, and environmental impact. Be part of a team that is making a difference!</li>
                     </ul>
                 </div>
             
